<package format="3">
  <name>action_mux</name>
  <version>0.1.0</version>
  <description>ROS 2 package for action server and client with topic-based goal handling</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>std_msgs</depend>
</package>
